# yetanotheride

./: .gitignore  README.md  docker-compose.yml
client/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  Home.tsx  crdt.ts  identity.ts  main.tsx
server/: Cargo.toml  Dockerfile
server/src/: crdt.rs  main.rs  state.rs
