[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
redis = { version = "0.24", features = ["tokio-comp", "tokio-native-tls-comp"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5"
# ADD THIS 👇
tower-http = { version = "0.5", features = ["cors"] }